--- a/section/chapter6.tex
+++ b/section/chapter6.tex
@@ -844,9 +844,9 @@
 \end{tabular}
 \end{table}
 
-\section{Rekapitulasi Laporan Harian dan Penilaian Kerja Pekan ke-5}
+\section{Rekapitulasi Laporan Harian dan Penilaian Kerja Pekan ke-6}
 
-\subsection{Laporan Harian Pekan ke-5}
+\subsection{Laporan Harian Pekan ke-6}
 
 \begin{table}[htp]
 \begin{center}
@@ -952,21 +952,23 @@
 \hline
 \multicolumn{1}{|c|}{\textbf{No}} & \multicolumn{1}{c|}{\textbf{Kategori}} & \textbf{Keterangan} \\ \hline
 \multicolumn{1}{|c|}{\multirow{1}{*}{1}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Dedikasi}}}
-& BukuInformatika/flask \#-\\
-\hline
-\multicolumn{1}{|c|}{\multirow{4}{*}{2}} & \multicolumn{1}{c|}{\multirow{4}{*}{\parbox{2.5cm}{Produktifitas}}}
 & -\\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{2}} & \multicolumn{1}{c|}{\multirow{4}{*}{\parbox{2.5cm}{Produktifitas}}}
+& a. Merge laporanirc/2019 \#119 dan \#132\\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{4}{*}{\parbox{2.5cm}{Produktifitas}}}
+& b. Mem-follow up penggunaan gitlab punya bu Noviana Riza\\
 \hline
 \multicolumn{1}{|c|}{\multirow{1}{*}{3}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Integritas}}}
 & \textit{able to merge/has no conflict} \\
 \hline
 \multicolumn{1}{|c|}{\multirow{2}{*}{4}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Disiplin}}}
-& Jam Datang : - \\
+& Jam Datang : 08.50 \\
 \multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
-& Jam Pulang : - \\
+& Jam Pulang : 16.20 \\
 \hline
 \multicolumn{1}{|c|}{\multirow{1}{*}{5}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Loyalitas}}}
-& -\\
+& Membersihkan dan merapihkan meja, mencuci gelas, membeli air minum (galon).\\
 \hline
 \end{tabularx}
 \end{center}
@@ -981,11 +983,297 @@
 \begin{tabular}{|c|c|c|p{\textwidth}|}
 \hline
 \textbf{No} & \textbf{Kategori} & \textbf{Poin} \\ \hline
-1. & Dedikasi & 3 \\ \hline
+1. & Dedikasi & 2 \\ \hline
 2. & Produktifitas & 3 \\ \hline
 3. & Integritas & 3 \\ \hline
 4. & Disiplin & 3 \\ \hline
 5. & Loyalitas & 3 \\ \hline
- & \textbf{Total Poin} & 15 \\ \hline
+ & \textbf{Total Poin} & 14 \\ \hline
 \end{tabular}
+\end{table}
+
+\section{Rekapitulasi Laporan Harian dan Penilaian Kerja Pekan ke-7}
+
+\subsection{Laporan Harian Pekan ke-7}
+
+\begin{table}[htp]
+\begin{center}
+\caption{Laporan Harian : Senin, 8 April 2019}
+\label{tab:lh080419}
+\begin{tabularx}{\textwidth}{|l|l|X|}
+\hline
+\multicolumn{1}{|c|}{\textbf{No}} & \multicolumn{1}{c|}{\textbf{Kategori}} & \textbf{Keterangan} \\ \hline
+\multicolumn{1}{|c|}{\multirow{1}{*}{1}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Dedikasi}}}
+& BukuInformatika/flask \#37\\
+\hline
+\multicolumn{1}{|c|}{\multirow{4}{*}{2}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Produktifitas}}}
+& a. Merge laporanirc/2019 \#131 dan \#133, pemrograman-iii/2a\_grup1 \#24 dan \#25\\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& b. Menilai tugas Kecerdasan Buatan Chapter 5 punya Fadila, Rahmi, dan Lusia.\\
+\hline
+\multicolumn{1}{|c|}{\multirow{1}{*}{3}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Integritas}}}
+& \textit{able to merge/has no conflict} \\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{4}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Disiplin}}}
+& Jam Datang : 09.00 WIB \\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& Jam Pulang : 16.20 WIB \\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{5}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Loyalitas}}}
+& Menyapu, membersihkan dan merapihkan meja, juga mengecek AC di pagi dan sore hari.\\
+\hline
+\end{tabularx}
+\end{center}
+\end{table}
+
+\begin{table}[htp]
+\begin{center}
+\caption{Laporan Harian : Selasa, 9 April 2019}
+\label{tab:lh090419}
+\begin{tabularx}{\textwidth}{|l|l|X|}
+\hline
+\multicolumn{1}{|c|}{\textbf{No}} & \multicolumn{1}{c|}{\textbf{Kategori}} & \textbf{Keterangan} \\ \hline
+\multicolumn{1}{|c|}{\multirow{1}{*}{1}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Dedikasi}}}
+& BukuInformatika/flask \#38\\
+\hline
+\multicolumn{1}{|c|}{\multirow{4}{*}{2}} & \multicolumn{1}{c|}{\multirow{5}{*}{\parbox{2.5cm}{Produktifitas}}}
+& a. Merge laporanirc/2019 \#135, pemrograman-iii/2a\_grup1 \#30, \#32, \#33, dan \#35, syarahulyaa/praktikum\_ai \#57, \#58, dan \#59\\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& b. Menilai tugas kecerdasan buatan kelas 3C Chapter 6\\
+\hline
+\multicolumn{1}{|c|}{\multirow{1}{*}{3}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Integritas}}}
+& \textit{able to merge/has no conflict} \\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{4}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Disiplin}}}
+& Jam Datang : 08.40 WIB. \\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& Jam Pulang : 16.30 WIB.\\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{5}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Loyalitas}}}
+& Menyapu, membersihkan dan merapihkan meja, juga mengecek AC di pagi dan sore hari.\\
+\hline
+\end{tabularx}
+\end{center}
+\end{table}
+
+\begin{table}[htp]
+\begin{center}
+\caption{Laporan Harian : Rabu, 10 April 2019}
+\label{tab:lh100419}
+\begin{tabularx}{\textwidth}{|l|l|X|}
+\hline
+\multicolumn{1}{|c|}{\textbf{No}} & \multicolumn{1}{c|}{\textbf{Kategori}} & \textbf{Keterangan} \\ \hline
+\multicolumn{1}{|c|}{\multirow{1}{*}{1}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Dedikasi}}}
+& BukuInformatika/flask \#38\\
+\hline
+\multicolumn{1}{|c|}{\multirow{1}{*}{2}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Produktifitas}}}
+& Merge laporanirc/2019 \#136, \#137, \#140, \#141, \#142, dan \#143, syarahulyaa/praktikum\_ai \#60 dan \#61\\
+\hline
+\multicolumn{1}{|c|}{\multirow{1}{*}{3}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Integritas}}}
+& \textit{able to merge/has no conflict} \\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{4}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Disiplin}}}
+& Jam Datang : 09.01 WIB \\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& Jam Pulang : 16.30 WIB \\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{5}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Loyalitas}}}
+& Menyapu, membersihkan dan merapihkan meja, juga mengecek AC di pagi hari.\\
+\hline
+\end{tabularx}
+\end{center}
+\end{table}
+
+\begin{table}[htp]
+\begin{center}
+\caption{Laporan Harian : Kamis, 11 April 2019}
+\label{tab:lh110419}
+\begin{tabularx}{\textwidth}{|l|l|X|}
+\hline
+\multicolumn{1}{|c|}{\textbf{No}} & \multicolumn{1}{c|}{\textbf{Kategori}} & \textbf{Keterangan} \\ \hline
+\multicolumn{1}{|c|}{\multirow{1}{*}{1}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Dedikasi}}}
+& BukuInformatika/flask \#39\\
+\hline
+\multicolumn{1}{|c|}{\multirow{5}{*}{2}} & \multicolumn{1}{c|}{\multirow{8}{*}{\parbox{2.5cm}{Produktifitas}}}
+& a. Merge syarahulyaa/praktikum\_ai \#62\\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& b. Menilai presentasi Chapter 2 dan 3, Dwi Yulianingsih pada mata kuliah Pemrograman 3 Kelas 2A\\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& c. Menilai presentasi Chapter 2 dan 3, Dwi Septiani pada mata kuliah Pemrograman 3 Kelas 2A\\
+\hline
+\multicolumn{1}{|c|}{\multirow{1}{*}{3}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Integritas}}}
+& \textit{able to merge/has no conflict} \\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{4}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Disiplin}}}
+& Jam Datang : 08.50 WIB. \\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& Jam Pulang : 16.30 WIB.\\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{5}} & \multicolumn{1}{c|}{\multirow{3}{*}{\parbox{2.5cm}{Loyalitas}}}
+& Menyapu, membersihkan dan merapihkan meja, mencuci gelas, juga mengecek AC di pagi dan sore hari.\\
+\hline
+\end{tabularx}
+\end{center}
+\end{table}
+
+\begin{table}[htp]
+\begin{center}
+\caption{Laporan Harian : Jumat, 12 April 2019}
+\label{tab:lh120419}
+\begin{tabularx}{\textwidth}{|l|l|X|}
+\hline
+\multicolumn{1}{|c|}{\textbf{No}} & \multicolumn{1}{c|}{\textbf{Kategori}} & \textbf{Keterangan} \\ \hline
+\multicolumn{1}{|c|}{\multirow{1}{*}{1}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Dedikasi}}}
+& BukuInformatika/flask \#40\\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{2}} & \multicolumn{1}{c|}{\multirow{4}{*}{\parbox{2.5cm}{Produktifitas}}}
+& Merge laporanirc/2019 \#144 dan \#147, syarahulyaa/praktikum\_ai \#63, \#64, \#65, \#66, dan \#67\\
+\hline
+\multicolumn{1}{|c|}{\multirow{1}{*}{3}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Integritas}}}
+& \textit{able to merge/has no conflict} \\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{4}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Disiplin}}}
+& Jam Datang : 08.20 \\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& Jam Pulang : 16.20 \\
+\hline
+\multicolumn{1}{|c|}{\multirow{1}{*}{5}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Loyalitas}}}
+& -\\
+\hline
+\end{tabularx}
+\end{center}
+\end{table}
+
+\subsection{Penilaian Kerja Pekan ke-7}
+
+\begin{table}[htp]
+\centering
+\caption{Nilai Pekan ke-7}
+\label{tab:nm07}
+\begin{tabular}{|c|c|c|p{\textwidth}|}
+\hline
+\textbf{No} & \textbf{Kategori} & \textbf{Poin} \\ \hline
+1. & Dedikasi & 3 \\ \hline
+2. & Produktifitas & 3 \\ \hline
+3. & Integritas & 3 \\ \hline
+4. & Disiplin & 2 \\ \hline
+5. & Loyalitas & 3 \\ \hline
+ & \textbf{Total Poin} & 14 \\ \hline
+\end{tabular}
+\end{table}
+
+\section{Rekapitulasi Laporan Harian dan Penilaian Kerja Pekan ke-8}
+
+\subsection{Laporan Harian Pekan ke-8}
+
+\begin{table}[htp]
+\begin{center}
+\caption{Laporan Harian : Senin, 15 April 2019}
+\label{tab:lh150419}
+\begin{tabularx}{\textwidth}{|l|l|X|}
+\hline
+\multicolumn{1}{|c|}{\textbf{No}} & \multicolumn{1}{c|}{\textbf{Kategori}} & \textbf{Keterangan} \\ \hline
+\multicolumn{1}{|c|}{\multirow{1}{*}{1}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Dedikasi}}}
+& -\\
+\hline
+\multicolumn{1}{|c|}{\multirow{3}{*}{2}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Produktifitas}}}
+& a. Menilai presentasi Kecerdasan Buatan Chapter 1 - 7 (Fadila)\\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& b. Menilai presentasi Kecerdasan Buatan Chapter 1 - 7 (Lusia)\\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& c. Menilai presentasi Kecerdasan Buatan Chapter 1 - 7 (Rahmi)\\
+\hline
+\multicolumn{1}{|c|}{\multirow{1}{*}{3}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Integritas}}}
+& \textit{able to merge/has no conflict} \\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{4}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Disiplin}}}
+& Jam Datang : 08.50 WIB \\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& Jam Pulang : 16.00 WIB \\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{5}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Loyalitas}}}
+& Menyapu, membersihkan dan merapihkan meja, juga mengecek AC di pagi dan sore hari.\\
+\hline
+\end{tabularx}
+\end{center}
+\end{table}
+
+\begin{table}[htp]
+\begin{center}
+\caption{Laporan Harian : Selasa, 16 April 2019}
+\label{tab:lh160419}
+\begin{tabularx}{\textwidth}{|l|l|X|}
+\hline
+\multicolumn{1}{|c|}{\textbf{No}} & \multicolumn{1}{c|}{\textbf{Kategori}} & \textbf{Keterangan} \\ \hline
+\multicolumn{1}{|c|}{\multirow{1}{*}{1}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Dedikasi}}}
+& BukuInformatika/flask \#41\\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{2}} & \multicolumn{1}{c|}{\multirow{5}{*}{\parbox{2.5cm}{Produktifitas}}}
+& Menilai tugas Kecerdasan Buatan Chapter 7 punya Fadila, Lusia, dan Rahmi.\\
+\hline
+\multicolumn{1}{|c|}{\multirow{1}{*}{3}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Integritas}}}
+& \textit{able to merge/has no conflict} \\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{4}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Disiplin}}}
+& Jam Datang : 07.30 WIB. \\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& Jam Pulang : 14.30 WIB.\\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{5}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Loyalitas}}}
+& Menyapu, membersihkan dan merapihkan meja, juga mengecek AC di pagi dan sore hari.\\
+\hline
+\end{tabularx}
+\end{center}
+\end{table}
+
+\subsection{Penilaian Kerja Pekan ke-8}
+
+\begin{table}[htp]
+\centering
+\caption{Nilai Pekan ke-8}
+\label{tab:nm08}
+\begin{tabular}{|c|c|c|p{\textwidth}|}
+\hline
+\textbf{No} & \textbf{Kategori} & \textbf{Poin} \\ \hline
+1. & Dedikasi & 2 \\ \hline
+2. & Produktifitas & 3 \\ \hline
+3. & Integritas & 3 \\ \hline
+4. & Disiplin & 2 \\ \hline
+5. & Loyalitas & 3 \\ \hline
+ & \textbf{Total Poin} & 13 \\ \hline
+\end{tabular}
+\end{table}
+
+\section{Rekapitulasi Laporan Harian dan Penilaian Kerja Pekan ke-8}
+
+\subsection{Laporan Harian Pekan ke-8}
+
+\begin{table}[htp]
+\begin{center}
+\caption{Laporan Harian : Senin, 22 April 2019}
+\label{tab:lh220419}
+\begin{tabularx}{\textwidth}{|l|l|X|}
+\hline
+\multicolumn{1}{|c|}{\textbf{No}} & \multicolumn{1}{c|}{\textbf{Kategori}} & \textbf{Keterangan} \\ \hline
+\multicolumn{1}{|c|}{\multirow{1}{*}{1}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Dedikasi}}}
+& BukuInformatika/flask \#34\\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{2}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Produktifitas}}}
+& a. Menilai Tugas Chapter5-Kecerdasan Buatan.\\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& b. Pelatihan Python-Flask oleh Fadila, Anisa, Tasya, dan .\\
+\hline
+\multicolumn{1}{|c|}{\multirow{1}{*}{3}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Integritas}}}
+& \textit{able to merge/has no conflict} \\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{4}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Disiplin}}}
+& Jam Datang : 07.59 WIB \\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& Jam Pulang : 16.00 WIB \\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{5}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Loyalitas}}}
+& Menyapu, membersihkan dan merapihkan meja, juga mengecek AC di pagi dan sore hari.\\
+\hline
+\end{tabularx}
+\end{center}
 \end{table}
