--- a/section/chapter6.tex
+++ b/section/chapter6.tex
@@ -1256,23 +1256,53 @@
 \hline
 \multicolumn{1}{|c|}{\textbf{No}} & \multicolumn{1}{c|}{\textbf{Kategori}} & \textbf{Keterangan} \\ \hline
 \multicolumn{1}{|c|}{\multirow{1}{*}{1}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Dedikasi}}}
-& BukuInformatika/flask \#34\\
+& -\\
 \hline
 \multicolumn{1}{|c|}{\multirow{2}{*}{2}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Produktifitas}}}
-& a. Menilai Tugas Chapter5-Kecerdasan Buatan.\\
+& a. Menginstall kebutuhan software untuk program Internship dan TA.\\
 \multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
-& b. Pelatihan Python-Flask oleh Fadila, Anisa, Tasya, dan .\\
+& b. Mencari jurnal ilmiah CNN Method.\\
 \hline
 \multicolumn{1}{|c|}{\multirow{1}{*}{3}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Integritas}}}
 & \textit{able to merge/has no conflict} \\
 \hline
 \multicolumn{1}{|c|}{\multirow{2}{*}{4}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Disiplin}}}
-& Jam Datang : 07.59 WIB \\
+& Jam Datang : 09.00 WIB \\
 \multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
-& Jam Pulang : 16.00 WIB \\
+& Jam Pulang : 15.30 WIB \\
 \hline
 \multicolumn{1}{|c|}{\multirow{2}{*}{5}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Loyalitas}}}
 & Menyapu, membersihkan dan merapihkan meja, juga mengecek AC di pagi dan sore hari.\\
+\hline
+\end{tabularx}
+\end{center}
+\end{table}
+
+\begin{table}[htp]
+\begin{center}
+\caption{Laporan Harian : Selasa, 23 April 2019}
+\label{tab:lh230419}
+\begin{tabularx}{\textwidth}{|l|l|X|}
+\hline
+\multicolumn{1}{|c|}{\textbf{No}} & \multicolumn{1}{c|}{\textbf{Kategori}} & \textbf{Keterangan} \\ \hline
+\multicolumn{1}{|c|}{\multirow{1}{*}{1}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Dedikasi}}}
+& bukuinformatika/flask \#42\\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{2}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Produktifitas}}}
+& a. Membuat script code deeplearning.py dan neuralnetwork.py.\\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& b. Mencari jurnal ilmiah CNN Method.\\
+\hline
+\multicolumn{1}{|c|}{\multirow{1}{*}{3}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Integritas}}}
+& \textit{able to merge/has no conflict} \\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{4}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Disiplin}}}
+& Jam Datang : 08.35 WIB \\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& Jam Pulang : 15.30 WIB \\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{5}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Loyalitas}}}
+& Menyapu, membersihkan dan merapihkan meja, juga mengecek AC di pagi dan sore hari, membeli galon.\\
 \hline
 \end{tabularx}
 \end{center}
