--- a/section/chapter9.tex
+++ b/section/chapter9.tex
@@ -381,3 +381,18 @@
 5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang  \\ \hline
 \end{tabular}
 \end{table}
+
+\begin{table}[htp]
+\caption{Laporan Harian Tanggal 23 April 2019}
+\label{tab:lh230419}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{No} & \multicolumn{1}{c|}{\textbf{Kategori}} & \multicolumn{1}{c|}{\textbf{Keterangan}} \\ \hline
+1 & Dedikasi & - BukuInformatika/ DeepLearningComputerVision \\ \hline
+2 & Produktifitas & Belajar, Presentasi kels 2C  \\
+3 & Integritas & able to merge \\ \hline
+4 & Disiplin & Jam Datang : 09.45 WIB \\
+ &  & Jam Pulang : 17.00 WIB \\ \hline
+5 & Loyalitas & Membersihkan dan merapihkan meja kerja lalu pulang  \\ \hline
+\end{tabular}
+\end{table}
