menambah tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -1787,6 +1787,48 @@
 \item Membersihkan area belakang IRC
 \item Membersihkan area sidang IRC
 \end{enumerate}
+
+\item \textbf{Tugas Harian tanggal 23/04/2019}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#59 
+\item Mencari jurnal untuk bahan internship II
+\item Mengurus untuk pembukuan internship I 
+\item Memberitahukan kepada kelas 2b yang belum presentasi agar segera presentasi mata kuliah pemrograman III
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#59 
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#59 
+\item Mencari jurnal untuk bahan internship II
+\item Mengurus untuk pembukuan internship I 
+\item Memberitahukan kepada kelas 2b yang belum presentasi agar segera presentasi mata kuliah pemrograman III
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.30
+\item Jam Keluar : 15.30
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\item Membersihkan area sidang IRC
+\end{enumerate}
 \end{enumerate}
 
 
