--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -1829,6 +1829,51 @@
 \item Membersihkan area belakang IRC
 \item Membersihkan area sidang IRC
 \end{enumerate}
+
+
+\item \textbf{Tugas Harian tanggal 24/04/2019}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#60
+\item Mencari jurnal untuk bahan internship TA
+\item Mengurus untuk pembukuan internship I 
+\item Menginput komentar hasil presentasi Survey Rekonstruksi Ulang Citra 2 Dimensi Pada Data Perekaman Visual Cortex (Bapak Rolly Maulana Awangga, S.T.,M.T)
+\item Memeriksa jurnal projek II tingkat 3 dengan judul PLOTTING BRAINWAVE SIGNAL
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#60
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#60
+\item Mencari jurnal untuk bahan internship TA
+\item Mengurus untuk pembukuan internship I 
+\item Menginput komentar hasil presentasi Survey Rekonstruksi Ulang Citra 2 Dimensi Pada Data Perekaman Visual Cortex (Bapak Rolly Maulana Awangga, S.T.,M.T)
+\item Memeriksa jurnal projek II tingkat 3 dengan judul PLOTTING BRAINWAVE SIGNAL
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.30
+\item Jam Keluar : 16.30
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\item Membersihkan area sidang IRC
+\end{enumerate}
 \end{enumerate}
 
 
