--- a/section/chapter6.tex
+++ b/section/chapter6.tex
@@ -1299,10 +1299,100 @@
 \multicolumn{1}{|c|}{\multirow{2}{*}{4}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Disiplin}}}
 & Jam Datang : 08.35 WIB \\
 \multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
-& Jam Pulang : 15.30 WIB \\
+& Jam Pulang : 16.15 WIB \\
 \hline
 \multicolumn{1}{|c|}{\multirow{2}{*}{5}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Loyalitas}}}
 & Menyapu, membersihkan dan merapihkan meja, juga mengecek AC di pagi dan sore hari, membeli galon.\\
+\hline
+\end{tabularx}
+\end{center}
+\end{table}
+
+\begin{table}[htp]
+\begin{center}
+\caption{Laporan Harian : Rabu, 24 April 2019}
+\label{tab:lh240419}
+\begin{tabularx}{\textwidth}{|l|l|X|}
+\hline
+\multicolumn{1}{|c|}{\textbf{No}} & \multicolumn{1}{c|}{\textbf{Kategori}} & \textbf{Keterangan} \\ \hline
+\multicolumn{1}{|c|}{\multirow{1}{*}{1}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Dedikasi}}}
+& bukuinformatika/flask \#42\\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{2}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Produktifitas}}}
+& a. Mengambil dataset foto untuk Internship II.\\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& b. Membuat review jurnal tentang visual cortex\\
+\hline
+\multicolumn{1}{|c|}{\multirow{1}{*}{3}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Integritas}}}
+& \textit{able to merge/has no conflict} \\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{4}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Disiplin}}}
+& Jam Datang : 08.35 WIB \\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& Jam Pulang : 18.00 WIB \\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{5}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Loyalitas}}}
+& Menyapu, membersihkan dan merapihkan meja, juga mengecek AC di pagi dan sore hari.\\
+\hline
+\end{tabularx}
+\end{center}
+\end{table}
+
+\begin{table}[htp]
+\begin{center}
+\caption{Laporan Harian : Kamis, 25 April 2019}
+\label{tab:lh250419}
+\begin{tabularx}{\textwidth}{|l|l|X|}
+\hline
+\multicolumn{1}{|c|}{\textbf{No}} & \multicolumn{1}{c|}{\textbf{Kategori}} & \textbf{Keterangan} \\ \hline
+\multicolumn{1}{|c|}{\multirow{1}{*}{1}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Dedikasi}}}
+& -\\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{2}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Produktifitas}}}
+& a. Mengambil dataset foto untuk Internship II.\\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& b. Membuat review jurnal tentang metode CNN\\
+\hline
+\multicolumn{1}{|c|}{\multirow{1}{*}{3}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Integritas}}}
+& \textit{able to merge/has no conflict} \\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{4}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Disiplin}}}
+& Jam Datang : 08.58 WIB \\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& Jam Pulang : 15.45 WIB \\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{5}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Loyalitas}}}
+& Menyapu, membersihkan dan merapihkan meja, juga mengecek AC di pagi dan sore hari.\\
+\hline
+\end{tabularx}
+\end{center}
+\end{table}
+
+\begin{table}[htp]
+\begin{center}
+\caption{Laporan Harian : Jumat, 26 April 2019}
+\label{tab:lh260419}
+\begin{tabularx}{\textwidth}{|l|l|X|}
+\hline
+\multicolumn{1}{|c|}{\textbf{No}} & \multicolumn{1}{c|}{\textbf{Kategori}} & \textbf{Keterangan} \\ \hline
+\multicolumn{1}{|c|}{\multirow{1}{*}{1}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Dedikasi}}}
+& bukuinformatika/flask \#43\\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{2}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Produktifitas}}}
+& a. Membuat review jurnal tentang metode CNN.\\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& b. Belajar Toefl.\\
+\hline
+\multicolumn{1}{|c|}{\multirow{1}{*}{3}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{Integritas}}}
+& \textit{able to merge/has no conflict} \\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{4}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Disiplin}}}
+& Jam Datang : 08.58 WIB \\
+\multicolumn{1}{|c|}{\multirow{1}{*}{}} & \multicolumn{1}{c|}{\multirow{1}{*}{\parbox{2.5cm}{}}}
+& Jam Pulang : 15.00 WIB \\
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{5}} & \multicolumn{1}{c|}{\multirow{2}{*}{\parbox{2.5cm}{Loyalitas}}}
+& Menyapu, membersihkan dan merapihkan meja, mencuci gelas-gelas.\\
 \hline
 \end{tabularx}
 \end{center}
