--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -1920,6 +1920,47 @@
 \item Membersihkan area belakang IRC
 \item Membersihkan area sidang IRC
 \end{enumerate}
+
+
+\item \textbf{Tugas Harian tanggal 26/04/2019}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#62
+\item Mencari jurnal untuk bahan internship dan TA
+\item Mengurus untuk pembukuan internship I 
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#62
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#62
+\item Mencari jurnal untuk bahan internship dan TA
+\item Mengurus untuk pembukuan internship I 
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.30
+\item Jam Keluar : 12.00
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\item Membersihkan area sidang IRC
+\end{enumerate}
 \end{enumerate}
 
 
@@ -2114,5 +2155,29 @@ Loyalitas & 3 \\
 \hline
 \end{tabular}
 \caption{Tabel Score Mingguan}
-\label{table:scoremingguan7}
+\label{table:scoremingguan8}
+\end{table}
+
+
+\section{Score Mingguan dari tanggal 22/04/2019 sampai 26/04/2019}
+Total score mingguan adalah 15,  keterangan seperti pada Tabel \ref{table:scoremingguan7}.
+\begin{table}[!ht]
+\centering
+\begin{tabular}{ |c|c|c|c|c|c|c|c|c|c| }
+\hline
+Kategori & Keterangan Nilai \\
+\hline
+Dedikasi & 3 \\
+\hline
+Produktif & 3 \\
+\hline
+Integritas & 3 \\
+\hline
+Disiplin & 3 \\
+\hline
+Loyalitas & 3 \\
+\hline
+\end{tabular}
+\caption{Tabel Score Mingguan}
+\label{table:scoremingguan9}
 \end{table}
