menambah tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -1961,6 +1961,89 @@
 \item Membersihkan area belakang IRC
 \item Membersihkan area sidang IRC
 \end{enumerate}
+
+
+\item \textbf{Tugas Harian tanggal 29/04/2019}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#63
+\item Mencari jurnal untuk bahan internship II dan TA
+\item Mengurus untuk pembukuan internship I 
+\item Mengerjakan laporan internship II
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#63
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#63
+\item Mencari jurnal untuk bahan internship II dan TA
+\item Mengurus untuk pembukuan internship I 
+\item Mengerjakan laporan internship II
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.30
+\item Jam Keluar : 17.00
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\item Membersihkan area sidang IRC
+\end{enumerate}
+
+\item \textbf{Tugas Harian tanggal 30/04/2019}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#64
+\item Mencari jurnal untuk bahan internship II dan TA
+\item Mengerjakan laporan internship II
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#64
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#64
+\item Mencari jurnal untuk bahan internship II dan TA
+\item Mengerjakan laporan internship II
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.30
+\item Jam Keluar : 18.40
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\item Membersihkan area sidang IRC
+\end{enumerate}
 \end{enumerate}
 
 
