menambah tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -2044,6 +2044,49 @@
 \item Membersihkan area belakang IRC
 \item Membersihkan area sidang IRC
 \end{enumerate}
+
+
+\item \textbf{Tugas Harian tanggal 02/05/2019}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#65
+\item Memperhatikan dan menilai hasil presentasi mata kuliah pemrograman III kelas 2b (Ichsan Hizman Hardy, Dika Sukma Pradana)
+\item Menginput nilai hasil presentasi mata kuliah pemrograman III kelas 2b (Ichsan Hizman Hardy, Dika Sukma Pradana)
+\item Memberikan aplikasi python dan spyder kepada mahasiswa tingkat 1 serta memberikan arahan untuk mempelajari selenium pada python dari internet
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#65
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#65
+\item Memperhatikan dan menilai hasil presentasi mata kuliah pemrograman III kelas 2b (Ichsan Hizman Hardy, Dika Sukma Pradana)
+\item Menginput nilai hasil presentasi mata kuliah pemrograman III kelas 2b (Ichsan Hizman Hardy, Dika Sukma Pradana)
+\item Memberikan aplikasi python dan spyder kepada mahasiswa tingkat 1 serta memberikan arahan untuk mempelajari selenium pada python dari internet
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.30
+\item Jam Keluar : 17.50
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\item Membersihkan area sidang IRC
+\end{enumerate}
 \end{enumerate}
 
 
