menambah tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -2087,6 +2087,51 @@
 \item Membersihkan area belakang IRC
 \item Membersihkan area sidang IRC
 \end{enumerate}
+
+
+\item \textbf{Tugas Harian tanggal 03/05/2019}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#66
+\item Memeriksa hasil UTS mata kuliah pemrograman III kelas 2b
+\item Menginput nilai hasil UTS mata kuliah pemrograman III kelas 2b
+\item Memeriksa hasil UTS mata kuliah kecerdasan buatan kelas 3c (AIP SUPRAPTO MUNARI, ANDI MUH ASLAM)
+\item Menginput nilai hasil UTS mata kuliah kecerdasan buatan kelas 3c  
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#66
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#66
+\item Memeriksa hasil UTS mata kuliah pemrograman III kelas 2b
+\item Menginput nilai hasil UTS mata kuliah pemrograman III kelas 2b
+\item Memeriksa hasil UTS mata kuliah kecerdasan buatan kelas 3c (AIP SUPRAPTO MUNARI, ANDI MUH ASLAM)
+\item Menginput nilai hasil UTS mata kuliah kecerdasan buatan kelas 3c  
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.30
+\item Jam Keluar : 17.00
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\item Membersihkan area sidang IRC
+\end{enumerate}
 \end{enumerate}
 
 
