--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -2132,6 +2132,49 @@
 \item Membersihkan area belakang IRC
 \item Membersihkan area sidang IRC
 \end{enumerate}
+
+\item \textbf{Tugas Harian tanggal 09/05/2019}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#67
+\item Memeriksa hasil UTS mata kuliah pemrograman III kelas 2b
+\item Menginput nilai hasil UTS mata kuliah pemrograman III kelas 2b
+\item Mengerjakan laporan internship II
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#67
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#67
+\item Memeriksa hasil UTS mata kuliah pemrograman III kelas 2b
+\item Menginput nilai hasil UTS mata kuliah pemrograman III kelas 2b
+\item Mengerjakan laporan internship II
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.30
+\item Jam Keluar : 18.00
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\item Membersihkan area sidang IRC
+\item Membantu mengambil buku GIS untuk dibawa ke IRC
+\end{enumerate}
 \end{enumerate}
 
 
@@ -2307,7 +2350,7 @@ Loyalitas & 3 \\
 
 
 \section{Score Mingguan dari tanggal 15/04/2019 sampai 19/04/2019}
-Total score mingguan adalah 15,  keterangan seperti pada Tabel \ref{table:scoremingguan7}.
+Total score mingguan adalah 15,  keterangan seperti pada Tabel \ref{table:scoremingguan8}.
 \begin{table}[!ht]
 \centering
 \begin{tabular}{ |c|c|c|c|c|c|c|c|c|c| }
@@ -2331,7 +2374,7 @@ Loyalitas & 3 \\
 
 
 \section{Score Mingguan dari tanggal 22/04/2019 sampai 26/04/2019}
-Total score mingguan adalah 15,  keterangan seperti pada Tabel \ref{table:scoremingguan7}.
+Total score mingguan adalah 15,  keterangan seperti pada Tabel \ref{table:scoremingguan9}.
 \begin{table}[!ht]
 \centering
 \begin{tabular}{ |c|c|c|c|c|c|c|c|c|c| }
@@ -2351,4 +2394,30 @@ Loyalitas & 3 \\
 \end{tabular}
 \caption{Tabel Score Mingguan}
 \label{table:scoremingguan9}
+\end{table}
+
+
+
+
+\section{Score Mingguan dari tanggal 29/04/2019 sampai 03/05/2019}
+Total score mingguan adalah 15,  keterangan seperti pada Tabel \ref{table:scoremingguan10}.
+\begin{table}[!ht]
+\centering
+\begin{tabular}{ |c|c|c|c|c|c|c|c|c|c| }
+\hline
+Kategori & Keterangan Nilai \\
+\hline
+Dedikasi & 3 \\
+\hline
+Produktif & 3 \\
+\hline
+Integritas & 3 \\
+\hline
+Disiplin & 3 \\
+\hline
+Loyalitas & 3 \\
+\hline
+\end{tabular}
+\caption{Tabel Score Mingguan}
+\label{table:scoremingguan10}
 \end{table}
