menambah tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -2139,6 +2139,7 @@
 \item Memeriksa hasil UTS mata kuliah pemrograman III kelas 2b
 \item Menginput nilai hasil UTS mata kuliah pemrograman III kelas 2b
 \item Mengerjakan laporan internship II
+\item Memeriksa revisi GACI bagian ALGORITMA GENETIKA
 \end{enumerate}
 
 \textbf{Dedikasi}
@@ -2174,6 +2175,47 @@
 \item Membersihkan area belakang IRC
 \item Membersihkan area sidang IRC
 \item Membantu mengambil buku GIS untuk dibawa ke IRC
+\end{enumerate}
+
+
+\item \textbf{Tugas Harian tanggal 10/05/2019}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#68
+\item Mengerjakan laporan internship II
+\item Mencari referensi untuk TA
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#68
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#68
+\item Mengerjakan laporan internship II
+\item Mencari referensi untuk TA
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.30
+\item Jam Keluar : 14.00
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\item Membersihkan area sidang IRC
 \end{enumerate}
 \end{enumerate}
 
