--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -2217,6 +2217,47 @@
 \item Membersihkan area belakang IRC
 \item Membersihkan area sidang IRC
 \end{enumerate}
+
+
+\item \textbf{Tugas Harian tanggal 13/05/2019}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#69
+\item Memeriksa revisian buku GACI bagian algoritma genetika
+\item Memperhatikan presentasi mata kuliah pemrograman III kelas 2b (Dika Sukma Pradana) chapter 6
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#69
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#69
+\item Memeriksa revisian buku GACI bagian algoritma genetika
+\item Memperhatikan presentasi mata kuliah pemrograman III kelas 2b (Dika Sukma Pradana) chapter 6
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.30
+\item Jam Keluar : 16.10
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\item Membersihkan area sidang IRC
+\end{enumerate}
 \end{enumerate}
 
 
