--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -2354,7 +2354,7 @@
 
 \textbf{Produktifitas}
 \begin{enumerate}
-\item Menambah materi mengenai DATUM \#71
+\item Menambah materi mengenai DATUM \#72
 \item Mencari referensi dari jurnal untuk internship II
 \end{enumerate}
 
@@ -2367,6 +2367,45 @@
 \begin{enumerate}
 \item Jam Masuk : 08.40
 \item Jam Keluar : 16.15
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\item Membersihkan area sidang IRC
+\end{enumerate}
+
+\item \textbf{Tugas Harian tanggal 17/05/2019}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#73
+\item Mencari referensi dari jurnal untuk internship II
+\item 
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#73
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai DATUM \#73
+\item Mencari referensi dari jurnal untuk internship II
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 08.40
+\item Jam Keluar : 14.00
 \end{enumerate}
 
 \textbf{Loyalitas}
