menambah tugas harian

--- a/section/chapter1.tex
+++ b/section/chapter1.tex
@@ -2417,6 +2417,46 @@
 \item Membersihkan area belakang IRC
 \item Membersihkan area sidang IRC
 \end{enumerate}
+
+\item \textbf{Tugas Harian tanggal 20/05/2019}
+\begin{enumerate}
+\item Menambah materi mengenai data vektor \#74
+\item Mengerjakan laporan internship II
+\item Membantu luqman tingkat 4 mengatasi error di gitlabnya
+\end{enumerate}
+
+\textbf{Dedikasi}
+\begin{enumerate}
+\item Menambah materi mengenai data vektor \#74
+\end{enumerate}
+
+\textbf{Produktifitas}
+\begin{enumerate}
+\item Menambah materi mengenai data vektor \#74
+\item Mengerjakan laporan internship II
+\item Membantu luqman tingkat 4 mengatasi error di gitlabnya
+\end{enumerate}
+
+\textbf{Integritas}
+\begin{enumerate}
+\item able to merge/has no conflict
+\end{enumerate}
+
+\textbf{Disiplin}
+\begin{enumerate}
+\item Jam Masuk : 09.40
+\item Jam Keluar : 15.30
+\end{enumerate}
+
+\textbf{Loyalitas}
+\begin{enumerate}
+\item Mengecek AC saat datang dan pulang dari IRC
+\item Menjaga peralatan yang ada di IRC
+\item Merapihkan kursi setelah pulamg dari IRC
+\item Membersihkan meja pribadi
+\item Membersihkan area belakang IRC
+\item Membersihkan area sidang IRC
+\end{enumerate}
 \end{enumerate}
 
 
